chore: update environment variables and configure ms-orders database in docker-compose

--- a/.env.template
+++ b/.env.template
@@ -4,5 +4,8 @@ CATALOG_MS_POSTGRES_PASSWORD=postgres
 CATALOG_MS_POSTGRES_DB=ms-catalog-db
 
 # MS-ORDERS Database
+ORDERS_MS_POSTGRES_USER=postgres
+ORDERS_MS_POSTGRES_PASSWORD=postgres
+ORDERS_MS_POSTGRES_DB=ms-orders-db
 
 # MS-AUTH Database
