feat: integrate NATS messaging for microservices communication in API Gateway and all services

--- a/apps/ms-catalog/.env.template
+++ b/apps/ms-catalog/.env.template
@@ -1,2 +1,8 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/database"
+# Database Configuration
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/ms-catalog-db"
+
+# Application Port
 PORT=3001
+
+# NATS
+NATS_SERVERS="nats://localhost:4222, nats://localhost:4223"
