--- a/apps/ms-orders/package.json
+++ b/apps/ms-orders/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "6.17.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "nats": "^2.29.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
