feat: add MS-AUTH database configuration to docker-compose and environment variables

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,6 @@ ORDERS_MS_POSTGRES_PASSWORD=postgres
 ORDERS_MS_POSTGRES_DB=ms-orders-db
 
 # MS-AUTH Database
+AUTH_MS_POSTGRES_USER=postgres
+AUTH_MS_POSTGRES_PASSWORD=postgres
+AUTH_MS_POSTGRES_DB=ms-auth-db
