--- a/apps/ms-catalog/package.json
+++ b/apps/ms-catalog/package.json
@@ -32,7 +32,8 @@
     "dotenv": "^17.2.3",
     "nats": "^2.29.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
