--- a/turbo.json
+++ b/turbo.json
@@ -1,9 +1,11 @@
 {
   "$schema": "https://turborepo.com/schema.json",
+  "ui": "tui",
   "tasks": {
     "dev": {
       "persistent": true,
-      "cache": false
+      "cache": false,
+      "interactive": true
     }
   }
 }
